adding baseline prep with N-1 data in baseline scenario

--- a/baseline_scenario.ipynb
+++ b/baseline_scenario.ipynb
@@ -2472,7 +2472,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "4dcde981",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2488,6 +2490,181 @@
    "source": [
     "mae/baseline_pred"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4cb2b5a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MAE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Production</th>\n",
+       "      <td>106811.400694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Surfaces</th>\n",
+       "      <td>5435.193452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rendements</th>\n",
+       "      <td>7.963408</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      MAE\n",
+       "Production  106811.400694\n",
+       "Surfaces      5435.193452\n",
+       "Rendements       7.963408"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_df_all(df):\n",
+    "    df = df.rename(columns={'Unnamed: 0':'Année'})\n",
+    "    df = df.set_index('Année')\n",
+    "\n",
+    "    col_rendements = []\n",
+    "    col_surfaces = []\n",
+    "    col_prod = []\n",
+    "\n",
+    "    for col in df.columns :\n",
+    "        if '1' in col: #rendements\n",
+    "            col_rendements.append(col)\n",
+    "        elif '2' in col: #production\n",
+    "            col_prod.append(col)\n",
+    "        else: #surfaces\n",
+    "            col_surfaces.append(col)\n",
+    "            \n",
+    "    df_rendements = df[col_rendements].drop(['Année',2022],axis=0)\n",
+    "    df_prod = df[col_prod].drop(['Année',2022],axis=0)\n",
+    "    df_surfaces = df[col_surfaces].drop(['Année',2022],axis=0)     \n",
+    "    \n",
+    "    dept_codes = [1,2,3,4,5,6,7,8,9,10,\n",
+    "              11,12,13,14,15,16,17,\n",
+    "              18,19,\n",
+    "              21,22,23,24,25,26,27,28,29,\n",
+    "              20,\n",
+    "              30,31,32,33,34,35,36,\n",
+    "              37,38,39,40,41,42,43,\n",
+    "              44,45,46,47,48,49,50,\n",
+    "              51,52,53,54,55,56,57,\n",
+    "              58,59,60,61,62,63,64,\n",
+    "              65,66,67,68,69,70,71,\n",
+    "              72,73,74,75,76,77,78,\n",
+    "              79,80,81,82,83,84,85,\n",
+    "              86,87,88,89,90,91,92,\n",
+    "              93,94,95,96,0]\n",
+    "    \n",
+    "    col_names_rend = df_rendements.columns\n",
+    "    col_names_surf = df_surfaces.columns\n",
+    "    col_names_prod = df_prod.columns\n",
+    "    \n",
+    "    dict_rename_rend = {}\n",
+    "    dict_rename_surf = {}\n",
+    "    dict_rename_prod = {}\n",
+    "    \n",
+    "    i = 0\n",
+    "    for col in col_names_rend:\n",
+    "        dict_rename_rend[col]=dept_codes[i]\n",
+    "        i = i+1\n",
+    "    \n",
+    "    i = 0\n",
+    "    for col in col_names_surf:\n",
+    "        dict_rename_surf[col]=dept_codes[i]\n",
+    "        i = i+1\n",
+    "    \n",
+    "    i = 0\n",
+    "    for col in col_names_prod:\n",
+    "        dict_rename_prod[col]=dept_codes[i]\n",
+    "        i = i+1\n",
+    "        \n",
+    "    df_rendements = df_rendements.rename(columns=dict_rename_rend)\n",
+    "    df_rendements = df_rendements.rename(columns={96:'FRANCE'})\n",
+    "    \n",
+    "    df_prod = df_prod.rename(columns=dict_rename_prod)\n",
+    "    df_prod = df_prod.rename(columns={96:'FRANCE'})\n",
+    "    \n",
+    "    df_surfaces = df_surfaces.rename(columns=dict_rename_surf)\n",
+    "    df_surfaces = df_surfaces.rename(columns={96:'FRANCE'})\n",
+    "    \n",
+    "    return df_rendements, df_surfaces, df_prod\n",
+    "\n",
+    "def baseline_prec_year():\n",
+    "    df_baseline_prod = df_prod.shift(1)\n",
+    "    df_baseline_rend = df_rendements.shift(1)\n",
+    "    df_baseline_surf = df_surfaces.shift(1)\n",
+    "    \n",
+    "    df_baseline_prod = df_baseline_prod.dropna()\n",
+    "    df_baseline_rend = df_baseline_rend.dropna()\n",
+    "    df_baseline_surf = df_baseline_surf.dropna()\n",
+    "    \n",
+    "    return df_baseline_prod, df_baseline_rend, df_baseline_surf\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score, max_error\n",
+    "import pandas as pd\n",
+    "\n",
+    "url = '/Users/pierre/code/PierreCeraH/deepagri/raw_data/cleaned/Histo_data_YieldsAreasProd.xlsx'\n",
+    "df = pd.read_excel(url, sheet_name='Blé tendre')\n",
+    "\n",
+    "df_rendements, df_surfaces, df_prod = get_df_all(df)\n",
+    "df_baseline_prod, df_baseline_rend, df_baseline_surf = baseline_prec_year()\n",
+    "\n",
+    "df_prod = df_prod.iloc[1: , :]\n",
+    "df_surfaces = df_surfaces.iloc[1: , :]\n",
+    "df_rendements = df_rendements.iloc[1: , :]\n",
+    "\n",
+    "mae_prod = mean_absolute_error(df_baseline_prod, df_prod)\n",
+    "mae_rend = mean_absolute_error(df_baseline_rend, df_rendements)\n",
+    "mae_surf = mean_absolute_error(df_baseline_surf, df_surfaces)\n",
+    "\n",
+    "results = {'Production' : mae_prod,\n",
+    "           'Surfaces' : mae_surf,\n",
+    "           'Rendements' : mae_rend}\n",
+    "\n",
+    "df_mae = pd.DataFrame.from_dict(results, orient='index')\n",
+    "df_mae = df_mae.rename(columns={0:'MAE'})\n",
+    "df_mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8b13b37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
