--- a/price_ratios.ipynb
+++ b/price_ratios.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "d44a55f9",
    "metadata": {},
    "outputs": [],
@@ -209,6 +209,350 @@
    "source": [
     "df_prices"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7a1749a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dates</th>\n",
+       "      <th>Soft Wheat FOB Rouen</th>\n",
+       "      <th>Barley FOB Rouen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2007-06-01</td>\n",
+       "      <td>148.50</td>\n",
+       "      <td>139.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2007-06-02</td>\n",
+       "      <td>148.50</td>\n",
+       "      <td>139.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2007-06-03</td>\n",
+       "      <td>148.50</td>\n",
+       "      <td>139.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2007-06-04</td>\n",
+       "      <td>148.50</td>\n",
+       "      <td>141.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2007-06-05</td>\n",
+       "      <td>150.00</td>\n",
+       "      <td>141.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5376</th>\n",
+       "      <td>2022-02-18</td>\n",
+       "      <td>266.30</td>\n",
+       "      <td>261.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5377</th>\n",
+       "      <td>2022-02-19</td>\n",
+       "      <td>266.30</td>\n",
+       "      <td>261.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5378</th>\n",
+       "      <td>2022-02-20</td>\n",
+       "      <td>266.30</td>\n",
+       "      <td>261.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5379</th>\n",
+       "      <td>2022-02-21</td>\n",
+       "      <td>271.75</td>\n",
+       "      <td>268.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5380</th>\n",
+       "      <td>2022-02-22</td>\n",
+       "      <td>275.00</td>\n",
+       "      <td>269.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5381 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Dates  Soft Wheat FOB Rouen  Barley FOB Rouen\n",
+       "0    2007-06-01                148.50             139.0\n",
+       "1    2007-06-02                148.50             139.0\n",
+       "2    2007-06-03                148.50             139.0\n",
+       "3    2007-06-04                148.50             141.0\n",
+       "4    2007-06-05                150.00             141.5\n",
+       "...         ...                   ...               ...\n",
+       "5376 2022-02-18                266.30             261.5\n",
+       "5377 2022-02-19                266.30             261.5\n",
+       "5378 2022-02-20                266.30             261.5\n",
+       "5379 2022-02-21                271.75             268.0\n",
+       "5380 2022-02-22                275.00             269.5\n",
+       "\n",
+       "[5381 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = '/Users/pierre/code/PierreCeraH/data-challenges/08-Projects/01/data/cleaned data/Historical_Prices_Grains_modif.xlsx'\n",
+    "\n",
+    "df = pd.read_excel(url, sheet_name='Ratios')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3a14be11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_prices_2022():\n",
+    "\n",
+    "    url = '/Users/pierre/code/PierreCeraH/data-challenges/08-Projects/01/data/cleaned data/Historical_Prices_Grains_modif.xlsx'\n",
+    "\n",
+    "    df = pd.read_excel(url, sheet_name='Ratios')\n",
+    "\n",
+    "    df['Ratio']=df['Soft Wheat FOB Rouen']/df['Barley FOB Rouen']\n",
+    "    df = df.set_index('Dates')\n",
+    "    df = df.loc['2021-02-20':'2022-02-22',:]\n",
+    "\n",
+    "    df = df.reset_index()\n",
+    "\n",
+    "    df = df.drop(columns=['Soft Wheat FOB Rouen','Barley FOB Rouen'])\n",
+    "    df = df.rename(columns={'Ratio':'Ratio_BléOrge'})\n",
+    "\n",
+    "    df = df.set_index('Dates')\n",
+    "    df = df.drop(df.index[df.index.month.isin([1, 2, 3, 4, 5, 6, 7, 8, 11, 12])])\n",
+    "    df_ = df.reset_index()\n",
+    "\n",
+    "    df_ = df_.groupby([df_['Dates'].dt.year,df_['Dates'].dt.month]).median()\n",
+    "\n",
+    "    df_ = df_.reset_index(level=0).rename({'Dates':'Year'},axis=1)\n",
+    "    df_ = df_.reset_index(level=0).rename({'Dates':'Month'},axis=1)\n",
+    "\n",
+    "    df_sep = df_[df_['Month']==9]\n",
+    "    df_oct = df_[df_['Month']==10]\n",
+    "\n",
+    "    df_sep = df_sep.set_index('Year')\n",
+    "    df_sep = df_sep.drop(columns='Month')\n",
+    "    df_oct = df_oct.set_index('Year')\n",
+    "    df_oct = df_oct.drop(columns='Month')\n",
+    "    df_oct = df_oct.rename(columns={'Ratio_BléOrge':'RatioOct'})\n",
+    "    df_sep = df_sep.rename(columns={'Ratio_BléOrge':'RatioSep'})\n",
+    "\n",
+    "    dept_to_keep = [80, 62, 2, 51, 60, 26, 27, 59, 76, 77, 10, 89, 14, 20, 55, 21, 86,\n",
+    "                    45, 8, 18, 57, 35, 61, 54, 37, 79, 36, 41, 49, 53, 72, 52, 56, 17,\n",
+    "                    32, 28, 85, 50, 67, 70, 3, 63, 71, 58, 78, 44, 16, 47, 91, 1, 81,\n",
+    "                    95, 88, 31, 68, 38, 82, 39, 25, 23, 43, 12, 22, 69, 87, 42, 24, 11,\n",
+    "                    46, 90, 15, 9, 74, 34, 19, 65, 33, 64, 5, 4, 48, 30, 7, 40, 84, 73,\n",
+    "                    13, 93, 94, 83, 66, 29, 6]\n",
+    "\n",
+    "    # BUILDING SEPTEMBER PRICES\n",
+    "    df_ind_sep = pd.DataFrame()\n",
+    "\n",
+    "    for index in df_sep.index:\n",
+    "        for dept in dept_to_keep :\n",
+    "            a_row = pd.Series([str(index+1) + '-' + str(dept), df_sep['RatioSep'][index]])\n",
+    "            row_df = pd.DataFrame([a_row])\n",
+    "            df_ind_sep = pd.concat([row_df, df_ind_sep], ignore_index=True)\n",
+    "\n",
+    "    df_ind_sep.index = df_ind_sep[0]\n",
+    "    df_ind_sep = df_ind_sep.drop(labels=0, axis=1)\n",
+    "    df_ind_sep = df_ind_sep.rename(columns={1:'RatioSep'})\n",
+    "\n",
+    "    # BUILDING OCTOBER PRICES\n",
+    "    df_ind_oct = pd.DataFrame()\n",
+    "\n",
+    "    for index in df_oct.index:\n",
+    "        for dept in dept_to_keep :\n",
+    "            a_row = pd.Series([str(index+1) + '-' + str(dept), df_oct['RatioOct'][index]])\n",
+    "            row_df = pd.DataFrame([a_row])\n",
+    "            df_ind_oct = pd.concat([row_df, df_ind_oct], ignore_index=True)\n",
+    "\n",
+    "    df_ind_oct.index = df_ind_oct[0]\n",
+    "    df_ind_oct = df_ind_oct.drop(labels=0, axis=1)\n",
+    "    df_ind_oct = df_ind_oct.rename(columns={0:'Year', 1:'RatioOct'})\n",
+    "\n",
+    "    df_prices = df_ind_sep.join(df_ind_oct, on=0)\n",
+    "    \n",
+    "    return df_prices\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5905b44e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RatioSep</th>\n",
+       "      <th>RatioOct</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-6</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-29</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-66</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-83</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-94</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-60</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-51</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-2</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-62</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-80</th>\n",
+       "      <td>1.091368</td>\n",
+       "      <td>1.098</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>93 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         RatioSep  RatioOct\n",
+       "0                          \n",
+       "2022-6   1.091368     1.098\n",
+       "2022-29  1.091368     1.098\n",
+       "2022-66  1.091368     1.098\n",
+       "2022-83  1.091368     1.098\n",
+       "2022-94  1.091368     1.098\n",
+       "...           ...       ...\n",
+       "2022-60  1.091368     1.098\n",
+       "2022-51  1.091368     1.098\n",
+       "2022-2   1.091368     1.098\n",
+       "2022-62  1.091368     1.098\n",
+       "2022-80  1.091368     1.098\n",
+       "\n",
+       "[93 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ff33d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
